--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body{
     margin: 0;
     height: 100vh;
     background-image: url("../images/bgJour.jpg");
     background-size: cover;
     backdrop-filter: blur(20px); 
-    
 
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
@@ -13,8 +15,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: fixed;
 
-    height: 30em;
+    height: 60%;
     width: 17em;
     opacity: 0.5;
     background: #D9D9D9;
@@ -30,15 +33,39 @@ body{
 .display{
     display: flex;
     flex-direction: row;
-    width: 50%;
+    height: 60%;
     align-items: center;
-    background-color: red;
-    margin: auto;
+
+    margin-top: 10%;
+    margin-left: 25%;
 }
 
-.search{
+.display-weather-min-max{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 25%;
+}
+
+.display-weather-rain-sun{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10%;
+
+}
+
+
+.display-weather-rain-sun span{
+    margin-left: 20px;
+}
+
+.display-weather-min-max span{
+    margin-left: 20px;
+}
+.text-display-info{
+    font-size: 5em;
+    color: black;
 }
