--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,10 @@
 #codePost {
-    border-radius: 5px;
+    position: relative;
+    border-radius: 0.5rem;
     font-size: 1em;
     border: none;
     background-color: rgba(128, 128, 128, 0.349);
-    padding: 4px;
+    padding: 0.5rem;
     outline: none;
     padding-right: 30px;
-    background-image: '\f002';
-    background-repeat: no-repeat;
-    background-position: right center;
 }
