--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ h1 {
     padding: 18px 0;
     text-align: center;
     font-size: 1.75rem;
-    background-color: #5372F0;
+    background-color: #4869EF;
 }
 
 .container{
@@ -63,7 +63,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     padding: 20px 70px 20px 20px;
-    background-color: #5372F0;
+    background-color: #4869EF;
 }
 
 .current-weather h2 {
@@ -81,7 +81,7 @@ h1 {
     margin-top: -15px;
 }
 
-.current-weather .icon h4 {
+.current-weather .icon h3 {
     margin-top: -10px;
     text-transform: capitalize;
 }
@@ -102,7 +102,7 @@ h1 {
 }
 
 #result li:active {
-    background-color: #5372F0;
+    background-color: #4869EF;
 }
 
 #result li:not(:last-child) {
@@ -126,8 +126,8 @@ footer {
     padding: .7em;
     font-size: 1.25em;
     margin: 0 auto;
-    border-top: solid rgb(173, 173, 173) 10px;
-    border-image: linear-gradient(to right, transparent, rgb(173, 173, 173) 50%, transparent) 1; 
+    border-top: solid #4869EF 10px;
+    border-image: linear-gradient(to right, transparent, #4869EF 50%, transparent) 1; 
 }
 
 #mon_github {
@@ -138,7 +138,7 @@ footer {
 }
 
 #mon_github:hover {
-    color: #334861;
+    color: #4869EF;
 }
 
 @media (max-width: 1400px) {
