fin de la v2 proche

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,12 +123,12 @@ h1 {
     font-size: 1.5rem;
 }
 
-.days-forecast .weather-cards {
+.days-forecast #weather-cards {
     display: flex;
     gap: 20px;
 }
 
-.weather-cards .card {
+#weather-cards .card {
     color: #fff;
     padding: 18px 16px;
     list-style: none;
@@ -137,12 +137,12 @@ h1 {
     border-radius: 5px;
 }
 
-.weather-cards .card h3 {
+#weather-cards .card h3 {
     font-size: 1.3rem;
     font-weight: 600;
 }
 
-.weather-cards .card img {
+#weather-cards .card img {
     max-width: 70px;
     margin: 5px 0 -12px 0;
 }
@@ -174,16 +174,18 @@ footer {
     .weather-data .current-weather {
       padding: 20px;
     }
-    .weather-cards {
+
+    #weather-cards {
       flex-wrap: wrap;
     }
-    .weather-cards .card {
+
+    #weather-cards .card {
       width: calc(100% / 4 - 15px);
     }
 }
 
 @media (max-width: 1200px) {
-    .weather-cards .card {
+    #weather-cards .card {
       width: calc(100% / 3 - 15px);
     }
 }
@@ -192,7 +194,8 @@ footer {
     .weather-input {
       width: 450px;
     }
-    .weather-cards .card {
+
+    #weather-cards .card {
       width: calc(100% / 2 - 10px);
     }
 }
@@ -202,6 +205,7 @@ footer {
       font-size: 1.45rem;
       padding: 16px 0;
     }
+    
     .container {
       flex-wrap: wrap;
       padding: 15px;
