--- a/styles/style.css
+++ b/styles/style.css
@@ -76,13 +76,20 @@ body {
     font-weight: 500;
 }
 
+.current-weather .icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .current-weather .icon img {
+    width: 100px;
     max-width: 120px;
     margin-top: -15px;
 }
 
 .current-weather .icon h3 {
-    margin-top: -10px;
     text-transform: capitalize;
 }
 
