--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 
 .container{
     display: flex;
-    gap:35px;
+    gap: 35px;
     padding: 30px;
 }
 
@@ -103,6 +103,7 @@ body {
     font-size: 1.2rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: none;
 }
 
 #openBtn:hover {
@@ -265,6 +266,7 @@ footer {
     text-align: center;
     position: fixed;
     bottom: 0;
+    top: 55rem;
     width: 100%;
     padding: .7em;
     font-size: 1.25em;
@@ -363,6 +365,20 @@ footer {
 @media (max-width: 500px) {
     #result {
         width: 94%;
+    }
+
+    #openBtn {
+        width: 130px;
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .current-weather h2 {
+        font-size: 1rem;
+    }
+
+    .current-weather h3 {
+        font-size: .8rem;
     }
 }
 
